# basic_math_problem_generator

./: Cargo.toml  README.md  gallery.slint
src/: main.rs
